fixed layout issue with accordion stuck at bottom

--- a/ngRollTheDice/src/app/components/display/display.component.css
+++ b/ngRollTheDice/src/app/components/display/display.component.css
@@ -1,25 +1,9 @@
-.resultsMasterDiv {
-  max-width: 40%;
-  margin-left: auto;
-  margin-right: 5%;
-}
-
 .card {
-  margin-bottom: 5px;
-}
-
-img {
-  margin-left: auto;
-
-}
-
-.card-body {
-  display: flex;
-  flex-direction: column;
+ width: 100%;
+ margin-bottom: 5px;
 }
 
 a {
-  margin-top: auto;
-  max-width: 30%;
   float: right;
 }
+
